; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/gtk/extr_yuicheckbutton.c_yui_check_button_set_property.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/gtk/extr_yuicheckbutton.c_yui_check_button_set_property.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8*, i8*, i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32*, i32*)* @yui_check_button_set_property to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @yui_check_button_set_property(i32* %0, i32 %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %9 = load i32, i32* %6, align 4
  switch i32 %9, label %28 [
    i32 128, label %10
    i32 130, label %16
    i32 129, label %22
  ]

10:                                               ; preds = %4
  %11 = load i32*, i32** %7, align 8
  %12 = call i8* @g_value_get_pointer(i32* %11)
  %13 = load i32*, i32** %5, align 8
  %14 = call %struct.TYPE_2__* @YUI_CHECK_BUTTON(i32* %13)
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 2
  store i8* %12, i8** %15, align 8
  br label %28

16:                                               ; preds = %4
  %17 = load i32*, i32** %7, align 8
  %18 = call i8* @g_value_get_pointer(i32* %17)
  %19 = load i32*, i32** %5, align 8
  %20 = call %struct.TYPE_2__* @YUI_CHECK_BUTTON(i32* %19)
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 1
  store i8* %18, i8** %21, align 8
  br label %28

22:                                               ; preds = %4
  %23 = load i32*, i32** %7, align 8
  %24 = call i8* @g_value_get_pointer(i32* %23)
  %25 = load i32*, i32** %5, align 8
  %26 = call %struct.TYPE_2__* @YUI_CHECK_BUTTON(i32* %25)
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 0
  store i8* %24, i8** %27, align 8
  br label %28

28:                                               ; preds = %4, %22, %16, %10
  ret void
}

declare dso_local i8* @g_value_get_pointer(i32*) #1

declare dso_local %struct.TYPE_2__* @YUI_CHECK_BUTTON(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
